backend - login response dto
