# src/modules/auth/auth.controller.ts
@@ -5,6 +5,7 @@ import { LoginAuthDto } from './dto/login-auth.dto';
 import { AuthService } from './auth.service';
 import { Public } from 'src/decorators/public.decorator';
 import { RequestAuthDto } from './dto/request-auth.dto';
+import { LoginAuthResponseDto } from './dto/login-auth-response.dto';
 
 @ApiTags('auth')
 @Controller('auth')
@@ -15,7 +16,7 @@ export class AuthController {
   @UseGuards(LocalAuthGuard)
   @Post('login')
   @ApiBody({ type: LoginAuthDto })
-  async login(@Request() req: RequestAuthDto) {
+  async login(@Request() req: RequestAuthDto): Promise<LoginAuthResponseDto> {
     return this.authService.login(req.user);
   }
 
