# src/modules/auth/dto/login-auth-response.dto.ts
@@ -1,0 +1,3 @@
+export class LoginAuthResponseDto {
+  accessToken: string;
+}
